updated DDT volume and issue information

--- a/_publications/2022-11-24-DDT-paper.md
+++ b/_publications/2022-11-24-DDT-paper.md
@@ -6,9 +6,9 @@ excerpt: 'Digital health and digital pharma are considered supportive tools for 
 date: 2022-11-24
 venue: 'Drug Discovery Today'
 paperurl: 'https://doi.org/10.1016/j.drudis.2022.103457'
-citation: 'Schuhmacher, A., Haefner, N., Honsberg, K., Goldhahn, J., & Gassmann, O. (2022). &quot;The dominant logic of Big Tech in healthcare and pharma.&quot; Forthcoming in <i>Drug Discovery Today</i>.'
+citation: 'Schuhmacher, A., Haefner, N., Honsberg, K., Goldhahn, J., & Gassmann, O. (2022). &quot;The dominant logic of Big Tech in healthcare and pharma.&quot; Forthcoming in <i>Drug Discovery Today</i>, <i>28</i>(2), 103457.'
 ---
 
 [Download paper here](https://doi.org/10.1016/j.drudis.2022.103457)
 
-Recommended citation: Schuhmacher, A., Haefner, N., Honsberg, K., Goldhahn, J., & Gassmann, O. (2022). "The dominant logic of Big Tech in healthcare and pharma." Forthcoming in <i>Drug Discovery Today</i>.
+Recommended citation: Schuhmacher, A., Haefner, N., Honsberg, K., Goldhahn, J., & Gassmann, O. (2022). "The dominant logic of Big Tech in healthcare and pharma." Forthcoming in <i>Drug Discovery Today</i>, <i>28</i>(2), 103457.
