Update to include exec ed

--- a/_teaching/2022-02-11-teaching-1.md
+++ b/_teaching/2022-02-11-teaching-1.md
@@ -1,21 +1,25 @@
 ---
 title: "Lecturer in Management at the University of St. Gallen"
 collection: teaching
-type: "Undergraduate and graduate courses"
+type: "Undergraduate, graduate, and executive education courses"
 permalink: /teaching/2022-02-11-teaching-1
 venue: "University of St. Gallen"
 location: "St. Gallen, Switzerland"
 ---
 
-I have taught courses at both the undergraduate and graduate levels starting in 2018.
+I have taught courses across the undergraduate, graduate, and executive education levels starting in 2018.
 
 Innovation Management
 ======
-B.A. level: Fall 2019, 2020 [hybrid], 2021[hybrid]; Spring 2022, 2023
+B.A. level: Fall 2019, 2020 [hybrid], 2021[hybrid], 2022, 2023; Spring 2022, 2023
 
 RPV: Developing an AI Strategy
 ======
-M.A. level: Fall 2019, 2020 [hybrid], 2021 [hybrid]
+M.A. level: Fall 2019, 2020 [hybrid], 2021 [hybrid], 2022, 2023
+
+AI in the Boardroom
+======
+ExecEd level: Fall 2023 (part of St. Gallen Board Programme)
 
 Innovation und Führung
 ======
